--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,6 +13,10 @@ li {
   list-style-type: none;
 }
 
+.feature-list li {
+  list-style-type: disc;
+}
+
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
